--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body{
     margin: 0;
     font-family: 'Lato';
     color: white;
+    overflow-x: hidden;
 }
 
 .background{
@@ -194,5 +195,89 @@ body{
 }
 
 .body{
-    background-image: url("images/background.jpg");
+    background-image: url("/images/background.jpg");
+}
+
+.login-container{
+    position: absolute;
+    background: #000000cc;
+    right: -25vw;
+    top: 0;
+    bottom: 0;
+    width: 25vw;
+    backdrop-filter: blur(5px);
+    transition: transform 0.3s ease-in-out;
+    
+}
+
+.login-container.active{
+    transform: translateX(-25vw);
+}
+
+.login-form{
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+}
+
+.input-group{
+    display: flex;
+    flex-direction: row;
+}
+
+.input-group .input-icon{
+    color: #ced4da;
+    /* background-color: #000000; */
+    background-color: transparent;
+    font-size: 12px;
+    padding: 5px;
+    border: 1px solid #4b4b4b;
+    border-right: none;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    width: 1.2rem;
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    display: inline-grid
+
+}
+
+.input-group .input{
+    color: #ced4da;
+    font-size: 16px;
+    padding: 0.4rem 0.75rem;
+    /* background-color: #000000; */
+    background-color: transparent;
+    border: 1px solid #4b4b4b;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    width: 100%;
+    
+}
+
+.input-group .input:focus-visible {
+    outline: 0 !important;
+}
+
+.button-group .btn{
+    width: 100%;
+    padding: 0.4rem;
+    font-size: 14px;
+    border-radius: 5px;
+    border: none;
+    background-color: #7600ff;
+    color: #ffffff;
+}
+
+.login-form .options{
+    display: flex;
+    justify-content: space-between;
+}
+
+.login-form .link{
+    /* text-decoration: none; */
+    color: #ced4da;
 }
