--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body{
     background-color: #000000;
+    background-image: url("/images/background.jpg");
     margin: 0;
     font-family: 'Lato';
     color: white;
@@ -198,7 +199,7 @@ body{
     background-image: url("/images/background.jpg");
 }
 
-.login-container{
+.sidenav-container{
     position: absolute;
     background: #000000cc;
     right: -25vw;
@@ -210,8 +211,20 @@ body{
     
 }
 
-.login-container.active{
+.sidenav-container.active{
     transform: translateX(-25vw);
+}
+
+.sidenav-container .options{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
+}
+
+.sidenav-container .options a{
+    text-decoration: none;
+    color: white;
 }
 
 .login-form{
@@ -280,4 +293,35 @@ body{
 .login-form .link{
     /* text-decoration: none; */
     color: #ced4da;
+}
+
+.genres{
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+    padding: 2rem;
+}
+
+.genres .genre{
+    background-color: #23232385;
+    text-align: center;
+    border-radius: 1rem;
+    font-size: 1.5rem;
+    width: 18rem;
+    height: 10rem;
+    display: flex;
+    justify-content: center;
+    backdrop-filter: blur(2px);
+    cursor: pointer;
+    align-items: center;
+    /* flex: 1 1 20rem; */
+    text-decoration: none;
+    color: white;
+    transition: 0.1s ease-in-out;
+}
+
+.genres .genre:hover{
+    background-color: #1a1a1a85;
+    font-size: 2rem;
 }
